--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
         "outDir": "./dist",
         "rootDir": "./src"
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src"],
     "exclude": ["node_modules"]
 }
